tests/baselines/reference/module_augmentExistingVariable.errors.txt
==== tests/cases/compiler/module_augmentExistingVariable.ts (1 errors) ====
    var console: any;
    
    module console {
           ~~~~~~~
!!! error TS2300: Duplicate identifier 'console'.
        export var x = 2;
    }